# forge-sparks

./:  forge-sparks.doap  .gitignore  LICENSE  LICENSE_MANIFESTO  README.md  com.mardojai.ForgeSparks.json  com.mardojai.ForgeSparksDevel.json  meson.build
.github/workflows/: CI.yml
data/: com.mardojai.ForgeSparks.desktop  com.mardojai.ForgeSparks.desktop.in.in  com.mardojai.ForgeSparks.gschema.xml  com.mardojai.ForgeSparks.metainfo.xml  com.mardojai.ForgeSparks.metainfo.xml.in.in  com.mardojai.ForgeSparks.service.in  meson.build
po/: LINGUAS  POTFILES  ar.po  ca.po  com.mardojai.ForgeSparks.pot  cs.po  de.po  es.po  et.po  fa.po  fi.po  fr.po  hi.po  hr.po  ia.po  it.po  ka.po  kk.po  nb_NO.po  nl.po  pt.po  pt_BR.po  ru.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_Hans.po
src/: accounts.js  accountsWindow.blp  accountsWindow.js  application.js  com.mardojai.ForgeSparks  forge.js  github.js  main.js  meson.build  notification.js  notificationRow.blp  notificationRow.js  notificationsModel.js  preferences.blp  preferences.js  style-dark.css  style.css  util.js  window.blp  window.js
src/forges/: forge.js  forgejo.js  gitea.js  github.js  gitlab.js  index.js
src/gtk/: help-overlay.blp
src/icons/: meson.build
src/model/: account.js  accountsManager.js  notification.js  notificationsList.js
src/widgets/: accountDialog.blp  accountDialog.js  accountsDialog.blp  accountsDialog.js  notificationRow.blp  notificationRow.js  preferences.blp  preferences.js
