
install_data(
    [
        'discussion-symbolic.svg',
        'issue-symbolic.svg',
        'merge-draft-symbolic.svg',
        'merge-symbolic.svg',
        'issue-done-symbolic.svg',
        'merge-denied-symbolic.svg',
        'merge-merged-symbolic.svg'
    ],
    rename: [
        '@0@-discussion-symbolic.svg'.format(application_id),
        '@0@-issue-symbolic.svg'.format(application_id),
        '@0@-merge-draft-symbolic.svg'.format(application_id),
        '@0@-merge-symbolic.svg'.format(application_id),
        '@0@-issue-done-symbolic.svg'.format(application_id),
        '@0@-merge-denied-symbolic.svg'.format(application_id),
        '@0@-merge-merged-symbolic.svg'.format(application_id)
    ],
    install_dir: datadir / 'icons/hicolor/scalable/status',
)
